# hierarchical-rag-beps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  run_tests.py  setup.py
config/: processing_config.yaml
deployment/: README.md
deployment/cpu/: Dockerfile  deploy_cpu.sh  docker-compose.yml  main.py
deployment/gpu/: Dockerfile  deploy_gpu.sh  docker-compose.yml  main.py
docs/: architecture.md  usage.md
examples/: README.md  basic_usage.py  batch_process_pdfs.py  batch_processing.py  check_pdf_files.py  vector_store_example.py
src/agent/: __init__.py  beps_agent.py  confidence_scorer.py  query_classifier.py  rag_handler.py  response_router.py  web_search_handler.py
src/config/: __init__.py  config.py  config_loader.py  processing_config.py  processing_config.yaml
src/hierarchical_rag/: __init__.py  hierarchical_rag.py
src/processing/: chunker.py  document_loader.py  pipeline.py  summary_generator.py
src/vector_store/: __init__.py  document_processor.py  embeddings.py  vector_store.py
tests/: integration_demo.py  run_tests.py  test_agent.py  test_pipeline.py  test_vector_store.py
